Zuvor von chat 2 Zahlenbelegung automatisch machen lassen. Totalkatastrophe. Hier wieder vorige mit 3 separaten Buttons, Funktionen top

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
       border: 1px solid var(--ui-panel-border);
       background: var(--ui-panel-bg);
       backdrop-filter: blur(6px);
+      /* ✅ NUR HIER: schwarzer Innenrahmen 4px ergänzt */
       box-shadow:
         inset 0 0 0 4px #000,
         0 12px 22px rgba(0,0,0,0.22),
@@ -559,7 +560,7 @@
       filter: drop-shadow(0 1px 0 rgba(0,0,0,0.25));
     }
 
-    /* ✅ Schlitz/Track schwarz */
+    /* ✅ NUR HIER: Schlitz/Track schwarz */
     input[type="range"]{
       -webkit-appearance: none;
       appearance: none;
@@ -614,21 +615,38 @@
       transform: translateY(1px) scale(0.99);
       filter: brightness(0.97);
     }
-    .startBtn[disabled]{
-      opacity: 0.75;
-      cursor: default;
+
+    /* ========= DEV Controls ========= */
+    .controls{
+      width: 100%;
+      display:flex;
+      justify-content:center;
+      gap: 12px;
+      padding: 0 6px;
+      margin-top: 6px;
+      flex-wrap: wrap;
+      opacity: 0.95;
     }
 
-    /* ========= Fly-In + Wobble (Zahlen) ========= */
-    @keyframes flyInWobble{
-      0%   { opacity: 0; transform: translateY(-46px) scale(0.72) rotate(-6deg); filter: blur(0.4px); }
-      65%  { opacity: 1; transform: translateY(6px) scale(1.05) rotate(4deg);  filter: blur(0px); }
-      80%  { opacity: 1; transform: translateY(-2px) scale(0.99) rotate(-3deg); }
-      92%  { opacity: 1; transform: translateY(1px) scale(1.01) rotate(2deg); }
-      100% { opacity: 1; transform: translateY(0px) scale(1.00) rotate(0deg); }
+    .btn{
+      border: 1px solid var(--btn-border);
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: 900;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      padding: 12px 16px;
+      border-radius: 14px;
+      cursor: pointer;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(255,255,255,0.15) inset;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
     }
-    .flyin{
-      animation: flyInWobble 520ms cubic-bezier(.18,.84,.22,1) both;
+    .btn:active{
+      transform: translateY(1px) scale(0.99);
+      filter: brightness(0.97);
     }
   </style>
 </head>
@@ -677,7 +695,7 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
-    <div class="uiPanel" aria-label="UI Panel">
+    <div class="uiPanel" aria-label="UI Panel (noch ohne Logik)">
 
       <div class="sliderRow" aria-label="Kippspeed">
         <div class="icon" aria-hidden="true" title="langsam">
@@ -724,6 +742,13 @@
       <button id="btnStart" class="startBtn">START</button>
     </div>
 
+    <div class="controls">
+      <button id="btnMix" class="btn">Würfel mischen (12)</button>
+      <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
+      <button id="btnCW" class="btn">KIPP ⟳ (CW)</button>
+      <button id="btnCCW" class="btn">KIPP ⟲ (CCW)</button>
+    </div>
+
   </div>
 
   <script>
@@ -733,16 +758,26 @@
     const wFace     = document.getElementById("wFaceGroup");
     const kipGroup  = document.getElementById("kipGroup");
 
-    // ===== UI =====
+    const btnMix    = document.getElementById("btnMix");
+    const btnKip50  = document.getElementById("btnKip50");
+    const btnCW     = document.getElementById("btnCW");
+    const btnCCW    = document.getElementById("btnCCW");
+
+    // ===== UI (Dummy, nicht verkabelt) =====
     const btnStart = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
+
+    let startedOnce = false;
+    btnStart.addEventListener("click", () => {
+      startedOnce = true;
+      btnStart.textContent = "ZAHLEN NEU SETZEN";
+    });
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
     }
 
-    // ===== Raster farbig =====
     const cols = ["A","B","C","D","E","F","G","H"];
     function key(r, cLetter){ return `${r}${cLetter}`; }
 
@@ -787,7 +822,6 @@
       grid.dataset.built = "1";
     }
 
-    // ===== Zahlenrendering =====
     function setDot(span, number){
       if(!span) return;
       span.classList.remove("dot");
@@ -796,7 +830,7 @@
 
     function clearSpan(span){
       if(!span) return;
-      span.classList.remove("dot","num10","num11","num12","flyin");
+      span.classList.remove("dot","num10","num11","num12");
       span.innerHTML = "";
       span.textContent = "";
       span.removeAttribute("data-val");
@@ -808,7 +842,7 @@
         return;
       }
 
-      span.classList.remove("num10","num11","num12","flyin");
+      span.classList.remove("num10","num11","num12");
       span.innerHTML = "";
       span.dataset.val = String(n);
 
@@ -841,9 +875,6 @@
       return pool.slice(0, count);
     }
 
-    // =========================================================
-    // GOLDENE LOGIK (3 Faces à 4 Werte)
-    // =========================================================
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -862,8 +893,7 @@
     let faceIndex = 0;
     const rotDeg = [0, 90, 180, 270];
 
-    // geplante Richtung für Preview
-    let plannedDir = +1; // +1 CW, -1 CCW
+    let plannedDir = +1;
 
     const slotTargetsW = [
       wFace.querySelector('[data-slot="S1"] .num > span'),
@@ -904,14 +934,12 @@
 
       const curr = sets[faceIndex];
 
-      // W-Ansicht (4 Slots)
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsW[i], curr[i]);
         if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsW[i], curr[i]);
         else slotTargetsW[i].classList.remove("dot");
       }
 
-      // KIP-Ansicht (rechts = current, links = next)
       const nextFaceIndex = (plannedDir === +1)
         ? (faceIndex + 1) % 3
         : (faceIndex + 2) % 3;
@@ -933,10 +961,59 @@
       }
     }
 
-    // ===== Anzeige-Modus umschalten =====
+    function reroll12(){
+      const twelve = getUniqueRandomNumbers(12, 1, 12);
+
+      planned[0] = twelve.slice(0,4);
+      planned[1] = twelve.slice(4,8);
+      planned[2] = twelve.slice(8,12);
+
+      sets = [
+        [null,null,null,null],
+        [null,null,null,null],
+        [null,null,null,null],
+      ];
+      assigned = [false,false,false];
+
+      rotIndex  = 0;
+      faceIndex = 0;
+      plannedDir = +1;
+
+      ensureAssigned(0);
+      applyRotationAndNumbers();
+    }
+
     let kipOn = false;
+
+    function stepCW(){
+      plannedDir = +1;
+
+      rotIndex  = (rotIndex + 1) % 4;
+      faceIndex = (faceIndex + 1) % 3;
+
+      if(!kipOn){
+        ensureAssigned(faceIndex);
+      }
+
+      applyRotationAndNumbers();
+    }
+
+    function stepCCW(){
+      plannedDir = -1;
+
+      rotIndex  = (rotIndex + 3) % 4;
+      faceIndex = (faceIndex + 2) % 3;
+
+      if(!kipOn){
+        ensureAssigned(faceIndex);
+      }
+
+      applyRotationAndNumbers();
+    }
+
     function setKipMode(on){
       kipOn = !!on;
+
       if(kipOn){
         wFace.style.display = "none";
         kipGroup.style.display = "block";
@@ -944,157 +1021,23 @@
         kipGroup.style.display = "none";
         wFace.style.display = "block";
       }
+
       applyRotationAndNumbers();
     }
 
-    // ===== Fly-In Helper =====
-    function triggerFlyIn(spans){
-      for(const s of spans){
-        if(!s) continue;
-        const hasContent = (s.textContent && s.textContent.trim().length) || (s.querySelector && s.querySelector(".d"));
-        if(!hasContent) continue;
+    btnMix.addEventListener("click", reroll12);
+    btnKip50.addEventListener("click", () => setKipMode(!kipOn));
+    btnCW.addEventListener("click", stepCW);
+    btnCCW.addEventListener("click", stepCCW);
 
-        s.classList.remove("flyin");
-        void s.offsetWidth; // reflow
-        s.classList.add("flyin");
-      }
-    }
-
-    function clearAllSlots(){
-      for(const s of slotTargetsW) clearSpan(s);
-      for(const s of slotTargetsKipRight) clearSpan(s);
-      for(const s of slotTargetsKipLeft) clearSpan(s);
-    }
-
-    function sleep(ms){ return new Promise(r => setTimeout(r, ms)); }
-
-    // =========================================================
-    // START-Ablauf MIT Zwischendarstellungen:
-    // W1 -> KIP(W1/W2) -> W2 -> KIP(W2/W3) -> W3 -> KIP(W3/W1) -> W1
-    // =========================================================
-    let isRunning = false;
-
-    async function runAutoBestueckung(){
-      if(isRunning) return;
-      isRunning = true;
-
-      btnStart.disabled = true;
-      btnStart.textContent = "BESTÜCKE…";
-
-      // Timing (einheitlich) – kannst du später „gefühlmäßig“ sagen, dann drehe ich’s
-      const tFly  = 560;
-      const tHold = 420;
-
-      // 1) neue Random-Planung
-      const twelve = getUniqueRandomNumbers(12, 1, 12);
-      planned[0] = twelve.slice(0,4);
-      planned[1] = twelve.slice(4,8);
-      planned[2] = twelve.slice(8,12);
-
-      // 2) reset
-      sets = [
-        [null,null,null,null],
-        [null,null,null,null],
-        [null,null,null,null],
-      ];
-      assigned = [false,false,false];
-
-      plannedDir = +1;
-      rotIndex = 0;
-      faceIndex = 0;
-
-      clearAllSlots();
-      setKipMode(false);
-      applyRotationAndNumbers();
-      await sleep(120);
-
-      // === W1 (normal) ===
-      ensureAssigned(0);
-      setKipMode(false);
-      rotIndex = 0; faceIndex = 0;
-      applyRotationAndNumbers();
-      triggerFlyIn(slotTargetsW);
-      await sleep(tFly);
-
-      // === Zwischenschritt: KIP W1↔W2 ===
-      // W2 wird jetzt „bestückt“ (links), W1 bleibt (rechts)
-      ensureAssigned(1);
-      plannedDir = +1;
-      rotIndex = 0; faceIndex = 0;  // current=W1, next=W2
-      setKipMode(true);
-      applyRotationAndNumbers();
-      triggerFlyIn(slotTargetsKipLeft); // NUR die linke Seite fliegt rein
-      await sleep(tFly);
-      await sleep(tHold);
-
-      // === W2 (normal) ===
-      setKipMode(false);
-      rotIndex = 1; faceIndex = 1;
-      applyRotationAndNumbers();
-      await sleep(tHold);
-
-      // === Zwischenschritt: KIP W2↔W3 ===
-      ensureAssigned(2);
-      plannedDir = +1;
-      rotIndex = 1; faceIndex = 1;  // current=W2, next=W3
-      setKipMode(true);
-      applyRotationAndNumbers();
-      triggerFlyIn(slotTargetsKipLeft); // W3 fliegt rein (links)
-      await sleep(tFly);
-      await sleep(tHold);
-
-      // === W3 (normal) ===
-      setKipMode(false);
-      rotIndex = 2; faceIndex = 2;
-      applyRotationAndNumbers();
-      await sleep(tHold);
-
-      // === Zwischenschritt: KIP W3↔W1 ===
-      plannedDir = +1;
-      rotIndex = 2; faceIndex = 2;  // current=W3, next=W1 (ist schon da)
-      setKipMode(true);
-      applyRotationAndNumbers();
-      await sleep(tHold);
-
-      // === zurück W1 (normal) ===
-      setKipMode(false);
-      rotIndex = 3; faceIndex = 0;
-      applyRotationAndNumbers();
-      await sleep(tHold);
-
-      // final: wieder „sauber“ auf W1 / rot=0
-      rotIndex = 0; faceIndex = 0;
-      applyRotationAndNumbers();
-
-      btnStart.textContent = "ZAHLEN NEU SETZEN";
-      btnStart.disabled = false;
-      isRunning = false;
-    }
-
-    btnStart.addEventListener("click", runAutoBestueckung);
-
-    // ===== Boot =====
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-
-      // Startzustand: leer
-      sets = [
-        [null,null,null,null],
-        [null,null,null,null],
-        [null,null,null,null],
-      ];
-      assigned = [false,false,false];
-
-      rotIndex = 0;
-      faceIndex = 0;
-      plannedDir = +1;
-
+      reroll12();
       setKipMode(false);
-      applyRotationAndNumbers();
     });
 
     window.addEventListener("resize", () => {
