--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* ✅ UI-Tablett */
+      /* UI-Panel */
       --ui-panel-bg: #4b2e22;
       --ui-panel-border: rgba(0,0,0,0.35);
-
-      --ui-text: #ead7be; /* hellbeige */
+      --ui-text: #ead7be;
 
       --rotSign: 1;
       --rot: 0deg;
+
+      /* Animation */
+      --rot-ms: 420ms;  /* wird per Slider im JS gesetzt */
+      --fade-ms: 140ms; /* Umschalten W <-> KIP */
     }
 
     html, body { height: 100%; }
@@ -85,7 +88,6 @@
       align-items:center;
     }
 
-    /* ========= UI TOP ========= */
     .title{
       width: 100%;
       display:flex;
@@ -107,7 +109,6 @@
         0 10px 18px rgba(0,0,0,0.25);
     }
 
-    /* ========= Board ========= */
     .board{
       position:relative;
       width: 100%;
@@ -197,7 +198,9 @@
       pointer-events: none;
     }
 
-    .wFaceGroup{
+    /* ====== Rotation-Gruppen: immer im DOM, Umschalten per opacity ====== */
+    .wFaceGroup,
+    .kipGroup{
       position:absolute;
       inset:0;
       z-index: 4;
@@ -212,6 +215,15 @@
         translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
       transform-origin: 0 0;
       will-change: transform;
+
+      transition:
+        transform var(--rot-ms) cubic-bezier(.2,.85,.2,1),
+        opacity var(--fade-ms) ease;
+      opacity: 1;
+    }
+
+    .isHidden{
+      opacity: 0;
     }
 
     .cubeShadow{
@@ -288,7 +300,6 @@
       z-index: 9;
     }
 
-    /* ===== Slot Typo (Referenz) ===== */
     .slot .num > span{
       display:inline-flex;
       align-items:center;
@@ -306,18 +317,32 @@
       line-height: 1;
     }
 
+    /* Fly-In + settle wobble */
+    @keyframes flyIn {
+      0%   { transform: translateY(-26px) scale(0.80) rotate(var(--num-rot,0deg)); opacity: 0; filter: blur(0.4px); }
+      70%  { transform: translateY(  2px) scale(1.03) rotate(var(--num-rot,0deg)); opacity: 1; filter: blur(0px); }
+      100% { transform: translateY(  0px) scale(1.00) rotate(var(--num-rot,0deg)); opacity: 1; }
+    }
+    @keyframes settleWobble {
+      0%   { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) rotate(0deg); }
+      30%  { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) rotate(2.0deg); }
+      60%  { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) rotate(-1.4deg); }
+      100% { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) rotate(0deg); }
+    }
+
+    .fly{
+      animation: flyIn 320ms cubic-bezier(.15,.9,.25,1) both,
+                 settleWobble 420ms ease 320ms both;
+    }
+
     .slot .num > span[data-val="7"]{ --opt-x: 2px; }
     .slot .num > span.num10{ --opt-x: -2px; }
-
     .slot .num > span[data-val="6"],
-    .slot .num > span[data-val="9"]{
-      --opt-x: -2px;
-    }
+    .slot .num > span[data-val="9"]{ --opt-x: -2px; }
 
     .slot .num > span .d{ display:inline-block; line-height: 1; }
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
-
     .slot .num > span.num12 .d + .d{ margin-left: -3px; }
 
     .slot .num > span.dot::after{
@@ -338,50 +363,19 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Fly-In + Mini-Wackler (nur Optik, Logik bleibt unangetastet) */
-    @keyframes flyInWobble{
-      0%   { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) translateY(-14px) scale(0.82) rotate(-6deg); opacity: 0; filter: blur(0.35px); }
-      55%  { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) translateY(2px)  scale(1.08) rotate(3deg); opacity: 1; filter: blur(0px); }
-      78%  { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) translateY(-1px) scale(0.99) rotate(-2deg); }
-      100% { transform: rotate(var(--num-rot,0deg)) translate(var(--opt-x,0px), var(--opt-y,0px)) translateY(0px)  scale(1)    rotate(0deg); }
-    }
-    .slot .num > span.fly{
-      animation: flyInWobble 420ms cubic-bezier(.18,.92,.18,1) both;
-    }
-
+    /* W1 Vollansicht Slots */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* =========================
-       KIP Gruppe
-       ========================= */
-    .kipGroup{
-      position:absolute;
-      inset:0;
-      z-index: 4;
-      pointer-events:none;
-      display:none;
-
-      --pivot-x: calc(4 * var(--step));
-      --pivot-y: calc(4 * var(--step));
-
-      transform:
-        translate(var(--pivot-x), var(--pivot-y))
-        rotate(var(--rot))
-        translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
-      transform-origin: 0 0;
-      will-change: transform;
-    }
-
+    /* KIP Gruppe (50%) */
+    .kipGroup{ z-index: 4; }
     .kipScale{
       position:absolute;
       inset:0;
-
       --pivot-x: calc(4 * var(--step));
       --pivot-y: calc(4 * var(--step));
-
       transform:
         translate(var(--pivot-x), var(--pivot-y))
         scaleX(0.6666667)
@@ -434,7 +428,7 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ========= UI PANEL ========= */
+    /* UI PANEL */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
@@ -545,7 +539,6 @@
       margin-top: 2px;
     }
 
-    /* ========= Slider ========= */
     .sliderRow{
       display:flex;
       align-items:center;
@@ -625,9 +618,8 @@
       filter: brightness(0.97);
     }
     .startBtn[disabled]{
-      opacity: 0.72;
+      opacity: 0.55;
       cursor: default;
-      filter: grayscale(0.15);
     }
   </style>
 </head>
@@ -653,7 +645,7 @@
         <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
-      <div id="kipGroup" class="kipGroup" aria-label="KIP Gruppe">
+      <div id="kipGroup" class="kipGroup isHidden" aria-label="KIP Gruppe">
         <div class="kipScale">
           <div class="kipShadow" aria-hidden="true"></div>
           <div class="kipEdgeCore" aria-hidden="true"></div>
@@ -676,7 +668,7 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
-    <div class="uiPanel" aria-label="UI Panel (noch ohne Logik)">
+    <div class="uiPanel" aria-label="UI Panel">
 
       <div class="sliderRow" aria-label="Kippspeed">
         <div class="icon" aria-hidden="true" title="langsam">
@@ -732,13 +724,31 @@
     const wFace     = document.getElementById("wFaceGroup");
     const kipGroup  = document.getElementById("kipGroup");
 
-    // ===== UI =====
-    const btnStart = document.getElementById("btnStart");
+    const btnStart   = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
+
+    function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
+    }
+
+    // Speed -> Timing
+    function getTiming(){
+      const v = Number(speedSlider.value || 3); // 0..9
+      // 0 = langsam, 9 = schnell
+      const rotMs = Math.round(620 - v * 46);      // ~620 .. ~206
+      const holdMsFull = Math.round(320 - v * 18); // ~320 .. ~158
+      const holdMsKip  = Math.round(260 - v * 14); // ~260 .. ~134
+      const fadeMs = 140;
+      return { rotMs, holdMsFull, holdMsKip, fadeMs };
+    }
+
+    function applyTimingToCSS(){
+      const { rotMs, fadeMs } = getTiming();
+      document.documentElement.style.setProperty("--rot-ms", rotMs + "ms");
+      document.documentElement.style.setProperty("--fade-ms", fadeMs + "ms");
     }
 
     const cols = ["A","B","C","D","E","F","G","H"];
@@ -799,42 +809,43 @@
       span.removeAttribute("data-val");
     }
 
-    function triggerFly(span){
-      if(!span) return;
-      span.classList.remove("fly");
-      // reflow, damit Animation immer neu startet
-      void span.offsetWidth;
-      span.classList.add("fly");
-    }
+    // Für Fly-In: merken, was zuletzt gerendert war
+    const lastVal = new WeakMap();
 
-    function renderNumber(span, n){
+    function renderNumber(span, n, animate=false){
+      if(!span) return;
+
+      const prev = lastVal.has(span) ? lastVal.get(span) : null;
+
       if(n === null || n === undefined){
+        lastVal.set(span, null);
         clearSpan(span);
         return;
       }
 
-      const prev = span.dataset.val ? Number(span.dataset.val) : null;
-
-      span.classList.remove("num10","num11","num12");
+      span.classList.remove("num10","num11","num12","fly");
       span.innerHTML = "";
       span.dataset.val = String(n);
 
       if (n === 10){
         span.classList.add("num10");
         span.innerHTML = `<span class="d">1</span><span class="d">0</span>`;
-      }else if (n === 11){
+      } else if (n === 11){
         span.classList.add("num11");
         span.innerHTML = `<span class="d">1</span><span class="d">1</span>`;
-      }else if (n === 12){
+      } else if (n === 12){
         span.classList.add("num12");
         span.innerHTML = `<span class="d">1</span><span class="d">2</span>`;
-      }else{
+      } else {
         span.textContent = String(n);
       }
 
-      // Fly-In nur wenn wirklich "neu" / geändert
-      if(prev !== n){
-        triggerFly(span);
+      lastVal.set(span, n);
+
+      if(animate && prev !== n){
+        // Reflow-Trick, damit Animation immer triggert
+        void span.offsetWidth;
+        span.classList.add("fly");
       }
     }
 
@@ -848,6 +859,7 @@
       return pool.slice(0, count);
     }
 
+    // ====== GOLDENE LOGIK (unverändert in der Idee) ======
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -865,7 +877,6 @@
     let rotIndex  = 0;
     let faceIndex = 0;
     const rotDeg = [0, 90, 180, 270];
-
     let plannedDir = +1;
 
     const slotTargetsW = [
@@ -900,7 +911,7 @@
       return [f4, f3, f2, f1];
     }
 
-    function applyRotationAndNumbers(){
+    function applyRotationAndNumbers(animate=false){
       const deg = rotDeg[rotIndex];
       wFace.style.setProperty("--rot", deg + "deg");
       kipGroup.style.setProperty("--rot", deg + "deg");
@@ -908,7 +919,7 @@
       const curr = sets[faceIndex];
 
       for(let i=0;i<4;i++){
-        renderNumber(slotTargetsW[i], curr[i]);
+        renderNumber(slotTargetsW[i], curr[i], animate);
         if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsW[i], curr[i]);
         else slotTargetsW[i].classList.remove("dot");
       }
@@ -920,7 +931,7 @@
       const next = sets[nextFaceIndex];
 
       for(let i=0;i<4;i++){
-        renderNumber(slotTargetsKipRight[i], curr[i]);
+        renderNumber(slotTargetsKipRight[i], curr[i], animate);
         if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
@@ -928,13 +939,27 @@
       const nextForPreview = (plannedDir === +1) ? mapHiddenToVisible_CW(next) : next;
 
       for(let i=0;i<4;i++){
-        renderNumber(slotTargetsKipLeft[i], nextForPreview[i]);
+        renderNumber(slotTargetsKipLeft[i], nextForPreview[i], animate);
         if(nextForPreview[i] !== null && nextForPreview[i] !== undefined) setDot(slotTargetsKipLeft[i], nextForPreview[i]);
         else slotTargetsKipLeft[i].classList.remove("dot");
       }
     }
 
-    function reroll12(){
+    // ===== Anzeige Umschalten =====
+    let kipOn = false;
+    function setKipMode(on){
+      kipOn = !!on;
+      if(kipOn){
+        wFace.classList.add("isHidden");
+        kipGroup.classList.remove("isHidden");
+      }else{
+        kipGroup.classList.add("isHidden");
+        wFace.classList.remove("isHidden");
+      }
+    }
+
+    // ===== Reset / Neu mischen =====
+    function reroll12_keepEmpty(){
       const twelve = getUniqueRandomNumbers(12, 1, 12);
 
       planned[0] = twelve.slice(0,4);
@@ -952,123 +977,86 @@
       faceIndex = 0;
       plannedDir = +1;
 
-      ensureAssigned(0);
-      applyRotationAndNumbers();
+      // Alles leeren (damit W1 NICHT "von Haus aus drauf" ist)
+      [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(s => clearSpan(s));
     }
 
-    let kipOn = false;
-
-    function stepCW(){
+    // ===== Ein "Vollschritt CW" (entspricht deinem 90°) =====
+    function advanceFullCW(){
       plannedDir = +1;
-
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
-
-      if(!kipOn){
-        ensureAssigned(faceIndex);
-      }
-
-      applyRotationAndNumbers();
+      ensureAssigned(faceIndex);
+      applyRotationAndNumbers(true);
     }
 
-    function stepCCW(){
-      plannedDir = -1;
-
-      rotIndex  = (rotIndex + 3) % 4;
-      faceIndex = (faceIndex + 2) % 3;
-
-      if(!kipOn){
-        ensureAssigned(faceIndex);
-      }
-
-      applyRotationAndNumbers();
-    }
-
-    function setKipMode(on){
-      kipOn = !!on;
-
-      if(kipOn){
-        wFace.style.display = "none";
-        kipGroup.style.display = "block";
-      }else{
-        kipGroup.style.display = "none";
-        wFace.style.display = "block";
-      }
-
-      applyRotationAndNumbers();
-    }
-
-    // ===== START übernimmt den Ping-Pong Ablauf =====
-    function getStepDelayMs(){
-      // Slider 0..9: 0 = langsam, 9 = schnell
-      const v = Math.max(0, Math.min(9, Number(speedSlider.value)));
-      // 0 -> 720ms, 9 -> 220ms
-      return Math.round(720 - v * 55);
-    }
-
-    function sleep(ms){ return new Promise(r => setTimeout(r, ms)); }
-
-    let running = false;
+    // ====== AUTOMATIK: kontinuierlich vorwärts, ohne sichtbaren Rücksprung ======
     let startedOnce = false;
+    let running = false;
 
-    async function runPingPong(){
+    async function runAutoCycle(){
       if(running) return;
       running = true;
-
       btnStart.disabled = true;
 
-      const d = getStepDelayMs();
+      applyTimingToCSS();
+      const { holdMsFull, holdMsKip, rotMs } = getTiming();
 
-      // 1) neues Set (12) – W1 sofort bestückt
-      reroll12();
+      // 1) Neu mischen, aber leer starten
+      reroll12_keepEmpty();
+
+      // Startzustand: W1 Vollansicht sichtbar, KIP verborgen
       setKipMode(false);
-      await sleep(d);
+      applyRotationAndNumbers(false);
 
-      // 2) KIP 50% EIN (Zwischenschritt sichtbar)
+      // 2) W1 BESTÜCKEN (Fly-In)
+      ensureAssigned(0);
+      applyRotationAndNumbers(true);
+      await sleep(holdMsFull);
+
+      // 3) Zwischenschritt zeigen (50% AN)
       setKipMode(true);
-      await sleep(d);
+      await sleep(holdMsKip);
 
-      // 3) KIP 50% AUS
+      // 4) Nächste Vollansicht (W2) – OHNE sichtbares Zurückspringen:
+      //    Wir bleiben "visuell" auf KIP, drehen/assignen intern, dann blenden wir direkt auf W2-Voll.
+      advanceFullCW();
+      await sleep(rotMs);
       setKipMode(false);
-      await sleep(d);
+      await sleep(holdMsFull);
 
-      // 4) 90° drehen -> W2 kommt "oben" / wird zugewiesen
-      stepCW();
-      await sleep(d);
-
-      // 5) KIP 50% EIN (Zwischenschritt: vorne bestückt, hinten leer)
+      // 5) Zwischenschritt (50% AN)
       setKipMode(true);
-      await sleep(d);
+      await sleep(holdMsKip);
 
-      // 6) KIP 50% AUS
+      // 6) Nächste Vollansicht (W3) – wieder vorwärts, ohne Backstep
+      advanceFullCW();
+      await sleep(rotMs);
       setKipMode(false);
-      await sleep(d);
+      await sleep(holdMsFull);
 
-      // 7) 90° drehen -> W3 wird zugewiesen
-      stepCW();
-      await sleep(d);
-
-      // 8) KIP 50% EIN (Zwischenschritt: beide bestückt sichtbar)
+      // 7) Zwischenschritt (50% AN) – jetzt sind beide Seiten bestückt sichtbar
       setKipMode(true);
-      await sleep(d);
+      await sleep(holdMsKip);
 
-      // 9) KIP 50% AUS
+      // 8) Zurück zu W1 (Vollansicht) – letzter Vollschritt im Kreis
+      advanceFullCW();
+      await sleep(rotMs);
       setKipMode(false);
-      await sleep(d);
+      await sleep(holdMsFull);
 
-      // 10) 90° drehen -> zurück zu W1 oben
-      stepCW();
-      await sleep(Math.max(120, Math.round(d * 0.6)));
-
-      // Button-Text nach erstem Run
+      // Fertig
       startedOnce = true;
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
       running = false;
     }
 
-    btnStart.addEventListener("click", runPingPong);
+    btnStart.addEventListener("click", () => {
+      runAutoCycle();
+    });
 
+    // Layout + Init
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
@@ -1076,15 +1064,20 @@
 
       buildGridOnce();
 
-      // Initialzustand wie bisher: W1 ist sichtbar und sofort bestückt
-      reroll12();
+      applyTimingToCSS();
+
+      // Start: leer, W1 sichtbar, KIP unsichtbar
+      reroll12_keepEmpty();
       setKipMode(false);
+      applyRotationAndNumbers(false);
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
     });
+
+    speedSlider.addEventListener("input", applyTimingToCSS);
   </script>
 </body>
 </html>
